add http-Get TextLog4Message and isDebug as param in method CustomJavaMethods